--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,16 @@
 * {
     margin: 0;
-    padding: 0;
+    padding: 20px;
     box-sizing: border-box;
 }
 
 body {
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  background-color: black;
+  color: white;
 }
 
 #game-canvas {
     width: 800px;
     height: 600px;
-    border: solid 1px black;
+    border: solid 2px black;
 }
